// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppListingTab should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
      >
        For information on listing your app 
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </p>
      <div
        class="el-form-layout-has-margin el-form-layout"
      >
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Name
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type email"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="supportEmail"
              placeholder="Email for customers to contact you"
              type="email"
              value="Mock field value"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Support email
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="telephone"
              placeholder="Number for customers to contact you"
              type="text"
              value="Mock field value"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Telephone
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="homePage"
              placeholder="Your company homepage. HTTP:// or HTTPS://"
              type="text"
              value="Mock field value"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Home page
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="launchUri"
              placeholder="HTTPS or HTTP only for localhost/dev.reapit"
              type="text"
              value="Mock field value"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Launch URI
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="termsAndConditionsUrl"
              placeholder="URL to link to your Terms and Conditions"
              type="text"
              value="Mock field value"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Terms and Conditions
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="privacyPolicyUrl"
              placeholder="URL to link to your Privacy Policy"
              type="text"
              value="Mock field value"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Privacy Policy
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="videoUrl1"
              placeholder="YouTube embed preferred or any https hosted video"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Getting Started Video URL
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="videoUrl2"
              placeholder="YouTube embed preferred or any https hosted video"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Why Use Us Video URL
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="pricingUrl"
              placeholder="URL to link to your Pricing Info"
              type="text"
              value="Mock field value"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Pricing Info
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type checkbox"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="isFree"
              type="checkbox"
              value="Mock field value"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              This application is free
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type checkbox"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="deletionProtection"
              type="checkbox"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Check to prevent app from being deleted
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              App Categories
            </label>
            <div
              class="mocked-styled-58 el-multi-select-input-wrapper"
            >
              <input
                class="mocked-styled-57 el-multi-select-input"
                id="app-edit-categories-select"
                value="Mock field value"
              />
              <div
                aria-label="Multi selected options"
                class="mocked-styled-55 el-multi-select-selected"
                role="listbox"
              >
                <span
                  class="el-ml2 el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name task"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <p>
                  Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
                </p>
              </div>
              <div
                aria-label="Multi unselected options"
                class="mocked-styled-56 el-multi-select-un-selected"
                role="listbox"
              >
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  MOCK_DESCRIPTION
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type undefined"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="summary"
              placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
              value="Mock field value"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Summary
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Description
          </label>
          <div />
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-140 el-file-input-wrap"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Upload Icon Image
            </label>
            <div
              class="el-flex-container el-flex-align-center"
            >
              <button
                class="el-mr4 el-intent-neutral el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Upload
              </button>
              <input
                class="mocked-styled-139 el-file-input"
                type="file"
              />
              <input
                class="mocked-styled-142 el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <small
                class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
              >
                Dimensions: 192px x 192px
              </small>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-140 el-file-input-wrap"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Upload Featured Image
            </label>
            <div
              class="el-flex-container el-flex-align-center"
            >
              <button
                class="el-mr4 el-intent-neutral el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Upload
              </button>
              <input
                class="mocked-styled-139 el-file-input"
                type="file"
              />
              <input
                class="mocked-styled-142 el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <small
                class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
              >
                Dimensions: 990px x 444px
              </small>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-140 el-file-input-wrap"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="el-flex-container el-flex-align-center"
            >
              <button
                class="el-mr4 el-intent-neutral el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Upload
              </button>
              <input
                class="mocked-styled-139 el-file-input"
                type="file"
              />
              <input
                class="mocked-styled-142 el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <small
                class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
              >
                Dimensions: 1196x x 914px
              </small>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-140 el-file-input-wrap"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="el-flex-container el-flex-align-center"
            >
              <button
                class="el-mr4 el-intent-neutral el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Upload
              </button>
              <input
                class="mocked-styled-139 el-file-input"
                type="file"
              />
              <input
                class="mocked-styled-142 el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <small
                class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
              >
                Dimensions: 1196x x 914px
              </small>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-140 el-file-input-wrap"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="el-flex-container el-flex-align-center"
            >
              <button
                class="el-mr4 el-intent-neutral el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Upload
              </button>
              <input
                class="mocked-styled-139 el-file-input"
                type="file"
              />
              <input
                class="mocked-styled-142 el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <small
                class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
              >
                Dimensions: 1196x x 914px
              </small>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-140 el-file-input-wrap"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="el-flex-container el-flex-align-center"
            >
              <button
                class="el-mr4 el-intent-neutral el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Upload
              </button>
              <input
                class="mocked-styled-139 el-file-input"
                type="file"
              />
              <input
                class="mocked-styled-142 el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <small
                class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
              >
                Dimensions: 1196x x 914px
              </small>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
    >
      For information on listing your app 
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </p>
    <div
      class="el-form-layout-has-margin el-form-layout"
    >
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="name"
            placeholder="The name of your app as it will appear to users"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Name
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type email"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="supportEmail"
            placeholder="Email for customers to contact you"
            type="email"
            value="Mock field value"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Support email
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="telephone"
            placeholder="Number for customers to contact you"
            type="text"
            value="Mock field value"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Telephone
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="homePage"
            placeholder="Your company homepage. HTTP:// or HTTPS://"
            type="text"
            value="Mock field value"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Home page
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="launchUri"
            placeholder="HTTPS or HTTP only for localhost/dev.reapit"
            type="text"
            value="Mock field value"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Launch URI
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="termsAndConditionsUrl"
            placeholder="URL to link to your Terms and Conditions"
            type="text"
            value="Mock field value"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Terms and Conditions
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="privacyPolicyUrl"
            placeholder="URL to link to your Privacy Policy"
            type="text"
            value="Mock field value"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Privacy Policy
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="videoUrl1"
            placeholder="YouTube embed preferred or any https hosted video"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Getting Started Video URL
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="videoUrl2"
            placeholder="YouTube embed preferred or any https hosted video"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Why Use Us Video URL
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="pricingUrl"
            placeholder="URL to link to your Pricing Info"
            type="text"
            value="Mock field value"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Pricing Info
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type checkbox"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="isFree"
            type="checkbox"
            value="Mock field value"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            This application is free
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type checkbox"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="deletionProtection"
            type="checkbox"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Check to prevent app from being deleted
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            App Categories
          </label>
          <div
            class="mocked-styled-58 el-multi-select-input-wrapper"
          >
            <input
              class="mocked-styled-57 el-multi-select-input"
              id="app-edit-categories-select"
              value="Mock field value"
            />
            <div
              aria-label="Multi selected options"
              class="mocked-styled-55 el-multi-select-selected"
              role="listbox"
            >
              <span
                class="el-ml2 el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name task"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <p>
                Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
              </p>
            </div>
            <div
              aria-label="Multi unselected options"
              class="mocked-styled-56 el-multi-select-un-selected"
              role="listbox"
            >
              <input
                aria-checked="false"
                aria-hidden="true"
                class="mocked-styled-52 el-multi-select-checkbox"
                id="test-static-id"
                role="option"
                type="checkbox"
              />
              <label
                class="el-has-grey-chips el-multi-select-label"
                for="test-static-id"
                role="option"
                tabindex="0"
              >
                MOCK_DESCRIPTION
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type undefined"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="summary"
            placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
            value="Mock field value"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Summary
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <label
          class="mocked-styled-41 el-label"
        >
          Description
        </label>
        <div />
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-140 el-file-input-wrap"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Upload Icon Image
          </label>
          <div
            class="el-flex-container el-flex-align-center"
          >
            <button
              class="el-mr4 el-intent-neutral el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Upload
            </button>
            <input
              class="mocked-styled-139 el-file-input"
              type="file"
            />
            <input
              class="mocked-styled-142 el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <small
              class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
            >
              Dimensions: 192px x 192px
            </small>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-140 el-file-input-wrap"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Upload Featured Image
          </label>
          <div
            class="el-flex-container el-flex-align-center"
          >
            <button
              class="el-mr4 el-intent-neutral el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Upload
            </button>
            <input
              class="mocked-styled-139 el-file-input"
              type="file"
            />
            <input
              class="mocked-styled-142 el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <small
              class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
            >
              Dimensions: 990px x 444px
            </small>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-140 el-file-input-wrap"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="el-flex-container el-flex-align-center"
          >
            <button
              class="el-mr4 el-intent-neutral el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Upload
            </button>
            <input
              class="mocked-styled-139 el-file-input"
              type="file"
            />
            <input
              class="mocked-styled-142 el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <small
              class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
            >
              Dimensions: 1196x x 914px
            </small>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-140 el-file-input-wrap"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="el-flex-container el-flex-align-center"
          >
            <button
              class="el-mr4 el-intent-neutral el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Upload
            </button>
            <input
              class="mocked-styled-139 el-file-input"
              type="file"
            />
            <input
              class="mocked-styled-142 el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <small
              class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
            >
              Dimensions: 1196x x 914px
            </small>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-140 el-file-input-wrap"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="el-flex-container el-flex-align-center"
          >
            <button
              class="el-mr4 el-intent-neutral el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Upload
            </button>
            <input
              class="mocked-styled-139 el-file-input"
              type="file"
            />
            <input
              class="mocked-styled-142 el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <small
              class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
            >
              Dimensions: 1196x x 914px
            </small>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-140 el-file-input-wrap"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="el-flex-container el-flex-align-center"
          >
            <button
              class="el-mr4 el-intent-neutral el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Upload
            </button>
            <input
              class="mocked-styled-139 el-file-input"
              type="file"
            />
            <input
              class="mocked-styled-142 el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <small
              class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
            >
              Dimensions: 1196x x 914px
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppListingTab should match a snapshot with errors and messages 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
      >
        For information on listing your app 
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </p>
      <div
        class="el-form-layout-has-margin el-form-layout"
      >
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Name
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type email"
              class="el-has-input-error el-input"
              id="test-static-id"
              name="supportEmail"
              placeholder="Email for customers to contact you"
              type="email"
            />
            <span
              class="el-intent-danger el-icon-new el-icon"
              style="font-size: 1rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1rem;"
                title="Icon image with name asterisk"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Support email
            </label>
            <p
              class="mocked-styled-42 el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="el-has-input-error el-input"
              id="test-static-id"
              name="telephone"
              placeholder="Number for customers to contact you"
              type="text"
            />
            <span
              class="el-intent-danger el-icon-new el-icon"
              style="font-size: 1rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1rem;"
                title="Icon image with name asterisk"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Telephone
            </label>
            <p
              class="mocked-styled-42 el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="el-has-input-error el-input"
              id="test-static-id"
              name="homePage"
              placeholder="Your company homepage. HTTP:// or HTTPS://"
              type="text"
            />
            <span
              class="el-intent-danger el-icon-new el-icon"
              style="font-size: 1rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1rem;"
                title="Icon image with name asterisk"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Home page
            </label>
            <p
              class="mocked-styled-42 el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="el-has-input-error el-input"
              id="test-static-id"
              name="launchUri"
              placeholder="HTTPS or HTTP only for localhost/dev.reapit"
              type="text"
            />
            <span
              class="el-intent-danger el-icon-new el-icon"
              style="font-size: 1rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1rem;"
                title="Icon image with name asterisk"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Launch URI
            </label>
            <p
              class="mocked-styled-42 el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="el-has-input-error el-input"
              id="test-static-id"
              name="termsAndConditionsUrl"
              placeholder="URL to link to your Terms and Conditions"
              type="text"
            />
            <span
              class="el-intent-danger el-icon-new el-icon"
              style="font-size: 1rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1rem;"
                title="Icon image with name asterisk"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Terms and Conditions
            </label>
            <p
              class="mocked-styled-42 el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="el-has-input-error el-input"
              id="test-static-id"
              name="privacyPolicyUrl"
              placeholder="URL to link to your Privacy Policy"
              type="text"
            />
            <span
              class="el-intent-danger el-icon-new el-icon"
              style="font-size: 1rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1rem;"
                title="Icon image with name asterisk"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Privacy Policy
            </label>
            <p
              class="mocked-styled-42 el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="videoUrl1"
              placeholder="YouTube embed preferred or any https hosted video"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Getting Started Video URL
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="videoUrl2"
              placeholder="YouTube embed preferred or any https hosted video"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Why Use Us Video URL
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="el-has-input-error el-input"
              id="test-static-id"
              name="pricingUrl"
              placeholder="URL to link to your Pricing Info"
              type="text"
            />
            <span
              class="el-intent-danger el-icon-new el-icon"
              style="font-size: 1rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1rem;"
                title="Icon image with name asterisk"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Pricing Info
            </label>
            <p
              class="mocked-styled-42 el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type checkbox"
              class="el-has-input-error el-input"
              id="test-static-id"
              name="isFree"
              type="checkbox"
            />
            <span
              class="el-intent-danger el-icon-new el-icon"
              style="font-size: 1rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1rem;"
                title="Icon image with name asterisk"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              This application is free
            </label>
            <p
              class="mocked-styled-42 el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type checkbox"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="deletionProtection"
              type="checkbox"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Check to prevent app from being deleted
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              App Categories
            </label>
            <div
              class="mocked-styled-58 el-multi-select-input-wrapper"
            >
              <input
                class="mocked-styled-57 el-multi-select-input"
                id="app-edit-categories-select"
              />
              <div
                aria-label="Multi selected options"
                class="mocked-styled-55 el-multi-select-selected"
                role="listbox"
              >
                <span
                  class="el-ml2 el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name task"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <p>
                  Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
                </p>
              </div>
              <div
                aria-label="Multi unselected options"
                class="mocked-styled-56 el-multi-select-un-selected"
                role="listbox"
              >
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  MOCK_DESCRIPTION
                </label>
              </div>
            </div>
            <p
              class="mocked-styled-42 el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type undefined"
              class="el-has-input-error el-input"
              id="test-static-id"
              name="summary"
              placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
            />
            <span
              class="el-intent-danger el-icon-new el-icon"
              style="font-size: 1rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1rem;"
                title="Icon image with name asterisk"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Summary
            </label>
            <p
              class="mocked-styled-42 el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Description
          </label>
          <div />
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-140 el-file-input-wrap"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Upload Icon Image
            </label>
            <div
              class="el-flex-container el-flex-align-center"
            >
              <button
                class="el-mr4 el-intent-neutral el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Upload
              </button>
              <input
                class="mocked-styled-139 el-file-input"
                type="file"
              />
              <input
                class="mocked-styled-142 el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <small
                class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
              >
                Dimensions: 192px x 192px
              </small>
            </div>
          </div>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-140 el-file-input-wrap"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Upload Featured Image
            </label>
            <div
              class="el-flex-container el-flex-align-center"
            >
              <button
                class="el-mr4 el-intent-neutral el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Upload
              </button>
              <input
                class="mocked-styled-139 el-file-input"
                type="file"
              />
              <input
                class="mocked-styled-142 el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <small
                class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
              >
                Dimensions: 990px x 444px
              </small>
            </div>
          </div>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-140 el-file-input-wrap"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="el-flex-container el-flex-align-center"
            >
              <button
                class="el-mr4 el-intent-neutral el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Upload
              </button>
              <input
                class="mocked-styled-139 el-file-input"
                type="file"
              />
              <input
                class="mocked-styled-142 el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <small
                class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
              >
                Dimensions: 1196x x 914px
              </small>
            </div>
          </div>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-140 el-file-input-wrap"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="el-flex-container el-flex-align-center"
            >
              <button
                class="el-mr4 el-intent-neutral el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Upload
              </button>
              <input
                class="mocked-styled-139 el-file-input"
                type="file"
              />
              <input
                class="mocked-styled-142 el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <small
                class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
              >
                Dimensions: 1196x x 914px
              </small>
            </div>
          </div>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-140 el-file-input-wrap"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="el-flex-container el-flex-align-center"
            >
              <button
                class="el-mr4 el-intent-neutral el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Upload
              </button>
              <input
                class="mocked-styled-139 el-file-input"
                type="file"
              />
              <input
                class="mocked-styled-142 el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <small
                class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
              >
                Dimensions: 1196x x 914px
              </small>
            </div>
          </div>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-140 el-file-input-wrap"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="el-flex-container el-flex-align-center"
            >
              <button
                class="el-mr4 el-intent-neutral el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Upload
              </button>
              <input
                class="mocked-styled-139 el-file-input"
                type="file"
              />
              <input
                class="mocked-styled-142 el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <small
                class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
              >
                Dimensions: 1196x x 914px
              </small>
            </div>
          </div>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
    >
      For information on listing your app 
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </p>
    <div
      class="el-form-layout-has-margin el-form-layout"
    >
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="name"
            placeholder="The name of your app as it will appear to users"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Name
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type email"
            class="el-has-input-error el-input"
            id="test-static-id"
            name="supportEmail"
            placeholder="Email for customers to contact you"
            type="email"
          />
          <span
            class="el-intent-danger el-icon-new el-icon"
            style="font-size: 1rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1rem;"
              title="Icon image with name asterisk"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Support email
          </label>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="el-has-input-error el-input"
            id="test-static-id"
            name="telephone"
            placeholder="Number for customers to contact you"
            type="text"
          />
          <span
            class="el-intent-danger el-icon-new el-icon"
            style="font-size: 1rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1rem;"
              title="Icon image with name asterisk"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Telephone
          </label>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="el-has-input-error el-input"
            id="test-static-id"
            name="homePage"
            placeholder="Your company homepage. HTTP:// or HTTPS://"
            type="text"
          />
          <span
            class="el-intent-danger el-icon-new el-icon"
            style="font-size: 1rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1rem;"
              title="Icon image with name asterisk"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Home page
          </label>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="el-has-input-error el-input"
            id="test-static-id"
            name="launchUri"
            placeholder="HTTPS or HTTP only for localhost/dev.reapit"
            type="text"
          />
          <span
            class="el-intent-danger el-icon-new el-icon"
            style="font-size: 1rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1rem;"
              title="Icon image with name asterisk"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Launch URI
          </label>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="el-has-input-error el-input"
            id="test-static-id"
            name="termsAndConditionsUrl"
            placeholder="URL to link to your Terms and Conditions"
            type="text"
          />
          <span
            class="el-intent-danger el-icon-new el-icon"
            style="font-size: 1rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1rem;"
              title="Icon image with name asterisk"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Terms and Conditions
          </label>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="el-has-input-error el-input"
            id="test-static-id"
            name="privacyPolicyUrl"
            placeholder="URL to link to your Privacy Policy"
            type="text"
          />
          <span
            class="el-intent-danger el-icon-new el-icon"
            style="font-size: 1rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1rem;"
              title="Icon image with name asterisk"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Privacy Policy
          </label>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="videoUrl1"
            placeholder="YouTube embed preferred or any https hosted video"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Getting Started Video URL
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="videoUrl2"
            placeholder="YouTube embed preferred or any https hosted video"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Why Use Us Video URL
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="el-has-input-error el-input"
            id="test-static-id"
            name="pricingUrl"
            placeholder="URL to link to your Pricing Info"
            type="text"
          />
          <span
            class="el-intent-danger el-icon-new el-icon"
            style="font-size: 1rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1rem;"
              title="Icon image with name asterisk"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Pricing Info
          </label>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type checkbox"
            class="el-has-input-error el-input"
            id="test-static-id"
            name="isFree"
            type="checkbox"
          />
          <span
            class="el-intent-danger el-icon-new el-icon"
            style="font-size: 1rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1rem;"
              title="Icon image with name asterisk"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            This application is free
          </label>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type checkbox"
            class="mocked-styled-38 el-input"
            id="test-static-id"
            name="deletionProtection"
            type="checkbox"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Check to prevent app from being deleted
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            App Categories
          </label>
          <div
            class="mocked-styled-58 el-multi-select-input-wrapper"
          >
            <input
              class="mocked-styled-57 el-multi-select-input"
              id="app-edit-categories-select"
            />
            <div
              aria-label="Multi selected options"
              class="mocked-styled-55 el-multi-select-selected"
              role="listbox"
            >
              <span
                class="el-ml2 el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name task"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <p>
                Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
              </p>
            </div>
            <div
              aria-label="Multi unselected options"
              class="mocked-styled-56 el-multi-select-un-selected"
              role="listbox"
            >
              <input
                aria-checked="false"
                aria-hidden="true"
                class="mocked-styled-52 el-multi-select-checkbox"
                id="test-static-id"
                role="option"
                type="checkbox"
              />
              <label
                class="el-has-grey-chips el-multi-select-label"
                for="test-static-id"
                role="option"
                tabindex="0"
              >
                MOCK_DESCRIPTION
              </label>
            </div>
          </div>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type undefined"
            class="el-has-input-error el-input"
            id="test-static-id"
            name="summary"
            placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
          />
          <span
            class="el-intent-danger el-icon-new el-icon"
            style="font-size: 1rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1rem;"
              title="Icon image with name asterisk"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.9 20.35v-6.425L5.325 17.15l-1.1-1.925L9.8 12 4.225 8.8l1.1-1.925L10.9 10.1V3.65h2.2v6.45l5.575-3.225 1.1 1.925L14.2 12l5.575 3.225-1.1 1.925-5.575-3.225v6.425z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Summary
          </label>
          <p
            class="mocked-styled-42 el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <label
          class="mocked-styled-41 el-label"
        >
          Description
        </label>
        <div />
        <p
          class="mocked-styled-42 el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-140 el-file-input-wrap"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Upload Icon Image
          </label>
          <div
            class="el-flex-container el-flex-align-center"
          >
            <button
              class="el-mr4 el-intent-neutral el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Upload
            </button>
            <input
              class="mocked-styled-139 el-file-input"
              type="file"
            />
            <input
              class="mocked-styled-142 el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <small
              class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
            >
              Dimensions: 192px x 192px
            </small>
          </div>
        </div>
        <p
          class="mocked-styled-42 el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-140 el-file-input-wrap"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Upload Featured Image
          </label>
          <div
            class="el-flex-container el-flex-align-center"
          >
            <button
              class="el-mr4 el-intent-neutral el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Upload
            </button>
            <input
              class="mocked-styled-139 el-file-input"
              type="file"
            />
            <input
              class="mocked-styled-142 el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <small
              class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
            >
              Dimensions: 990px x 444px
            </small>
          </div>
        </div>
        <p
          class="mocked-styled-42 el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-140 el-file-input-wrap"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="el-flex-container el-flex-align-center"
          >
            <button
              class="el-mr4 el-intent-neutral el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Upload
            </button>
            <input
              class="mocked-styled-139 el-file-input"
              type="file"
            />
            <input
              class="mocked-styled-142 el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <small
              class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
            >
              Dimensions: 1196x x 914px
            </small>
          </div>
        </div>
        <p
          class="mocked-styled-42 el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-140 el-file-input-wrap"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="el-flex-container el-flex-align-center"
          >
            <button
              class="el-mr4 el-intent-neutral el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Upload
            </button>
            <input
              class="mocked-styled-139 el-file-input"
              type="file"
            />
            <input
              class="mocked-styled-142 el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <small
              class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
            >
              Dimensions: 1196x x 914px
            </small>
          </div>
        </div>
        <p
          class="mocked-styled-42 el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-140 el-file-input-wrap"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="el-flex-container el-flex-align-center"
          >
            <button
              class="el-mr4 el-intent-neutral el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Upload
            </button>
            <input
              class="mocked-styled-139 el-file-input"
              type="file"
            />
            <input
              class="mocked-styled-142 el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <small
              class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
            >
              Dimensions: 1196x x 914px
            </small>
          </div>
        </div>
        <p
          class="mocked-styled-42 el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-140 el-file-input-wrap"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="el-flex-container el-flex-align-center"
          >
            <button
              class="el-mr4 el-intent-neutral el-button"
              type="button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Upload
            </button>
            <input
              class="mocked-styled-139 el-file-input"
              type="file"
            />
            <input
              class="mocked-styled-142 el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <small
              class="el-text-base el-small-text el-has-grey-text el-has-no-margin"
            >
              Dimensions: 1196x x 914px
            </small>
          </div>
        </div>
        <p
          class="mocked-styled-42 el-input-error"
        >
          An Error
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
